# OOP-Elevator

./: .gitignore  CMakeLists.txt  README.md  elevator.cpp  elevsystem.hpp  hello  main
.VSCodeCounter/2023-04-21_03-02-17/: details.md  diff-details.md  diff.md  diff.txt  results.md  results.txt
.VSCodeCounter/2023-04-21_03-02-35/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-21_03-03-10/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-21_03-03-20/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-21_16-32-44/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-21_17-33-51/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-21_19-27-59/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/: elevator.hpp  elevsystem.hpp  person.hpp  stimula.hpp
src/: elevator.cpp  elevsystem.cpp  main.cpp  person.cpp  stimula  stimula.cpp
